[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = {version = "1.4.26", features = ["default"]}
libloading = "0.7"

[profile.release]
panic = "abort"     # abort immediately rather than unwind, removes need for extra unwinding code; smaller binary
strip = "symbols"   # remove symbols from binary; smaller binary
opt-level = 'z'     # z is for smallest possible binary including no loop vectorization, 3 is most speed, 0 for faster compilation
codegen-units = 1   # Reduce Parallel Code Generation Units to Increase Optimization
lto = true          # longer compile time, more optimization
incremental = false # recompile fully to ensure optimizations

# Compile build-dependencies in release mode with more optimized than default
[profile.release.build-override]
opt-level = 'z'
codegen-units = 1
